Создано две activity Main и ColorThemeSelection. Подобрано 4 цветовых решения. Подготовлен ресурсный файл color с выбранными цветами.
Подготовлена разметка activity_main, activity_color_theme_selection.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryTh0">#03A9F4</color>
+    <color name="colorPrimaryDarkTh0">#0288D1</color>
+    <color name="colorAccentTh0">#FFC107</color>
+
+    <color name="colorPrimaryTh1">#FEDBD0</color>
+    <color name="colorPrimaryDarkTh1">#442C2E</color>
+    <color name="colorAccentTh1">#FEEAE6</color>
+
+    <color name="colorPrimaryTh2">#607d8b</color>
+    <color name="colorPrimaryDarkTh2">#455A64</color>
+    <color name="colorAccentTh2">#FF9800</color>
+
+    <color name="colorPrimaryTh3">#009688</color>
+    <color name="colorPrimaryDarkTh3">#00796B</color>
+    <color name="colorAccentTh3">#CDDC39</color>
 </resources>
