--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,39 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme0" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/colorPrimaryTh0</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkTh0</item>
+        <item name="colorAccent">@color/colorAccentTh0</item>
+    </style>
+
+    <style name="AppTheme1" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryTh1</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkTh1</item>
+        <item name="colorAccent">@color/colorAccentTh1</item>
+    </style>
+
+    <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryTh2</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkTh2</item>
+        <item name="colorAccent">@color/colorAccentTh2</item>
+    </style>
+
+    <style name="AppTheme3" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryTh3</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkTh3</item>
+        <item name="colorAccent">@color/colorAccentTh3</item>
+    </style>
+
+    <style name="ButtonSelection">
+        <item name="android:textSize">28sp</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:layout_weight">1</item>
     </style>
 
 </resources>
