--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme0" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme0" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryTh0</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkTh0</item>
@@ -27,6 +27,23 @@
         <item name="colorPrimary">@color/colorPrimaryTh3</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkTh3</item>
         <item name="colorAccent">@color/colorAccentTh3</item>
+    </style>
+    
+    <style name="inputFieldOutlinedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="errorTextColor">?attr/colorAccent</item>
+        <item name="errorTextAppearance">@style/TextAppearance.MaterialComponents.Body1</item>
+        <item name="hintTextColor">?attr/colorAccent</item>
+        <item name="android:textColorHint">?attr/colorPrimaryDark</item>
+        <item name="hintTextAppearance">@style/TextAppearance.MaterialComponents.Headline5</item>
+        <item name="android:focusable">false</item>
+        <item name="android:state_focused">false</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginEnd">16dp</item>
+    </style>
+
+    <style name="materialButton">
+        <item name="elevation">4dp</item>
     </style>
 
     <style name="ButtonSelection">
