--- a/app/src/main/res/drawable/form_badge.xml
+++ b/app/src/main/res/drawable/form_badge.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="?attr/colorAccent"/>
+    <solid android:color="@color/colorBadge"/>
     <stroke android:color="@android:color/white"
         android:width="1.5dp"/>
     <corners android:radius="16dp"/>
