--- a/app/src/main/res/layout/badge.xml
+++ b/app/src/main/res/layout/badge.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="top|center"
         android:gravity="center"
         android:textSize="14sp"
-        android:textColor="?attr/colorPrimaryDark"
+        style="@style/textBadge"
         android:minWidth="22dp"
         android:minHeight="22dp"
         android:layout_marginStart="10dp"
