--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme0" parent="Theme.MaterialComponents.Light.DarkActionBar">
@@ -6,23 +6,24 @@
         <item name="colorPrimary">@color/colorPrimaryTh0</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkTh0</item>
         <item name="colorAccent">@color/colorAccentTh0</item>
+        <item name="android:windowContentTransitions" tools:ignore="NewApi">true</item>
     </style>
 
-    <style name="AppTheme1" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme1" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryTh1</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkTh1</item>
         <item name="colorAccent">@color/colorAccentTh1</item>
     </style>
 
-    <style name="AppTheme2" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme2" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryTh2</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkTh2</item>
         <item name="colorAccent">@color/colorAccentTh2</item>
     </style>
 
-    <style name="AppTheme3" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme3" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimaryTh3</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDarkTh3</item>
@@ -51,6 +52,10 @@
         <item name="android:layout_margin">4dp</item>
         <item name="android:padding">16dp</item>
         <item name="android:layout_weight">1</item>
+    </style>
+
+    <style name="textBadge">
+        <item name="android:textColor">@android:color/white</item>
     </style>
 
 </resources>
