Создать RecyclerView с любыми картинками
Добавить SnapHelper для подкручивания до центра item
Добавить удаление картинки по свайпу

--- a/app/src/main/res/drawable/bottom_navigation_colors.xml
+++ b/app/src/main/res/drawable/bottom_navigation_colors.xml
@@ -5,6 +5,6 @@
         android:color="?attr/colorPrimaryDark" />
     <item
         android:state_checked="false"
-        android:color="?attr/colorControlHighlight" />
+        android:color="?attr/colorSecondary" />
 
 </selector>
