добавлено: выбор список или сетка, анимация перехода между выбором,
перетаскивание, анимация смахивания, перетаскивания

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -8,19 +8,32 @@
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="home"
-        app:showAsAction="withText"/>
+        android:titleCondensed="home"
+        android:tooltipText="home"
+        app:showAsAction="always|withText"/>
 
     <item
-        android:id="@+id/navigation_gallery"
-        android:icon="@android:drawable/ic_menu_gallery"
-        android:title="gallery"
-        app:showAsAction="withText"/>
+        android:id="@+id/navigation_gallery_list"
+        android:icon="@drawable/ic_view_headline_black_24dp"
+        android:title="gallery list"
+        android:titleCondensed="list"
+        android:tooltipText="gallery list"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/navigation_gallery_grid"
+        android:icon="@drawable/ic_view_module_black_24dp"
+        android:title="gallery table"
+        android:titleCondensed="table"
+        android:tooltipText="gallery table"
+        app:showAsAction="always|withText"/>
 
     <item
         android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="notifications"
-        app:showAsAction="withText"
+        android:titleCondensed="notifications"
+        android:tooltipText="notifications"
+        app:showAsAction="always|withText"
         />
-
 </menu>
