--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_autorenew_white_24dp"
+        app:srcCompat="@drawable/ic_autorenew_white_24dp"
         app:tint="@android:color/white"
         app:layout_anchor = "@id/bottom_sheet"
         app:layout_anchorGravity = "top|end"
