--- a/app/src/main/res/layout/fragment_favorite_image.xml
+++ b/app/src/main/res/layout/fragment_favorite_image.xml
@@ -10,8 +10,8 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:padding="8dp"/>
 
