--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -19,16 +19,36 @@
         android:contentDescription="image" />
 
     <com.google.android.material.chip.Chip
-        android:id="@+id/chip"
+        android:id="@+id/chip_favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
         android:checkable="true"
-        android:layout_margin="16dp"
+        android:layout_marginEnd="16dp"
         app:chipIcon="@drawable/ic_favorite_border_red_a700_24dp"
         app:checkedIcon="@drawable/ic_favorite_red_a700_24dp"
         app:chipEndPadding="0dp"
+        app:chipStrokeColor="?attr/colorAccent"
+        app:chipStrokeWidth="2dp"
         app:iconStartPadding="8dp"
         app:rippleColor="?attr/colorAccent"/>
+
+    <com.google.android.material.chip.Chip
+        android:id="@+id/chip_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start|bottom"
+        android:checkable="true"
+        android:layout_marginStart="16dp"
+        app:chipIcon="@android:drawable/ic_menu_delete"
+        app:checkedIcon="@null"
+        app:chipIconTint="?attr/colorPrimaryDark"
+        app:chipStrokeColor="?attr/colorAccent"
+        app:chipStrokeWidth="2dp"
+        app:chipIconSize="32dp"
+        app:chipEndPadding="0dp"
+        app:iconStartPadding="8dp"
+        app:rippleColor="?attr/colorAccent"/>
+
 
 </com.google.android.material.card.MaterialCardView>
