--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -28,4 +28,11 @@
         android:title="notifications"
         app:showAsAction="withText"
         />
+
+    <item
+        android:id="@+id/navigation_setting"
+        android:icon="@drawable/ic_settings_applications_black_24dp"
+        android:title="setting"
+        app:showAsAction="withText"
+        />
 </menu>
