--- a/app/src/main/res/layout/fragment_input_fields.xml
+++ b/app/src/main/res/layout/fragment_input_fields.xml
@@ -8,71 +8,104 @@
     android:padding="8dp">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/login_layout"
+        android:id="@+id/what_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="login"
+        android:hint="what to look for"
         style="@style/inputFieldOutlinedBox"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/password_layout"
+        app:layout_constraintBottom_toTopOf="@id/type"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_chainStyle="packed"
-        app:errorEnabled="true"
+        app:counterEnabled="true"
+        app:counterMaxLength="100"
+        app:counterTextAppearance="@style/TextAppearance.MaterialComponents.Body1"
+        app:helperTextEnabled="true"
+        app:helperText="yellow+flower"
+        app:helperTextTextColor="?attr/colorPrimaryDark"
+        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Body1"
         app:endIconMode="custom"
-        >
+        app:errorEnabled="true"
+        app:errorTextColor="?attr/colorAccent" >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/login"
+            android:id="@+id/what"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textAutoCorrect"
             android:paddingTop="24dp"
-            android:textSize="22sp"
-            />
+            android:lines="2"/>
+
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/password_layout"
+    <View
+        android:id="@+id/type"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_margin="8dp"
+        android:background="@android:drawable/divider_horizontal_textfield"
+        app:layout_constraintTop_toBottomOf="@id/what_layout"
+        app:layout_constraintBottom_toTopOf="@id/choice_type"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/choice_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="password"
-        style="@style/inputFieldOutlinedBox"
-        app:layout_constraintTop_toBottomOf="@id/login_layout"
-        app:layout_constraintBottom_toTopOf="@id/button"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp"
+        android:lines="2"
+        android:background="@android:drawable/btn_dropdown"
+        app:layout_constraintTop_toBottomOf="@id/type"
+        app:layout_constraintBottom_toTopOf="@id/orientation"
         app:layout_constraintEnd_toEndOf="parent"
-        app:errorEnabled="true"
-        app:endIconMode="password_toggle"
-        app:passwordToggleEnabled="true"
-        app:helperTextEnabled="true"
-        app:helperText="0 1 2 3 4 5 6 7 8 9"
-        app:helperTextTextColor="?attr/colorPrimaryDark"
-        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Body1"
-        >
+        app:layout_constraintStart_toStartOf="parent"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:paddingTop="24dp"
-            android:textSize="22sp"
-           />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <View
+        android:id="@+id/orientation"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
         android:layout_margin="8dp"
-        android:text="Применить"
-        android:textSize="22sp"
-        style="@style/materialButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password_layout"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@android:drawable/divider_horizontal_textfield"
+        app:layout_constraintTop_toBottomOf="@id/choice_type"
+        app:layout_constraintBottom_toTopOf="@id/choice_orientation"
         app:layout_constraintEnd_toEndOf="parent"
-         />
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/choice_orientation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:lines="2"
+        android:background="@android:drawable/btn_dropdown"
+        app:layout_constraintTop_toBottomOf="@id/orientation"
+        app:layout_constraintBottom_toTopOf="@id/category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <View
+        android:id="@+id/category"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="8dp"
+        android:background="@android:drawable/divider_horizontal_textfield"
+        app:layout_constraintTop_toBottomOf="@id/choice_orientation"
+        app:layout_constraintBottom_toTopOf="@id/choice_category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/choice_category"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:lines="2"
+        android:background="@android:drawable/btn_dropdown"
+        app:layout_constraintTop_toBottomOf="@id/category"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
