--- a/app/src/main/res/layout/dialog_spinner.xml
+++ b/app/src/main/res/layout/dialog_spinner.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:divider="@android:drawable/divider_horizontal_textfield"
-    android:dividerHeight="2dp"
-    android:showDividers="beginning|middle"
     android:padding="16dp" >
 
     <ListView
-        android:id="@+id/list_item"
+        android:id="@+id/viewList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"/>
+        android:layout_margin="8dp"
+        android:divider="@android:drawable/divider_horizontal_textfield"
+        android:dividerHeight="3dp"
+        android:layout_gravity="center"
+        />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -21,7 +21,7 @@
         android:layout_gravity="end"
         android:orientation="horizontal"
         android:layout_margin="8dp"
-        android:layout_weight="1">
+        >
 
         <Button
             android:id="@+id/but_cancel"
