--- a/app/src/main/res/layout/fragment_input_fields.xml
+++ b/app/src/main/res/layout/fragment_input_fields.xml
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:lines="2"
+        android:textAllCaps="false"
         android:background="@android:drawable/btn_dropdown"
         app:layout_constraintTop_toBottomOf="@id/type"
         app:layout_constraintBottom_toTopOf="@id/orientation"
@@ -78,7 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:lines="2"
+        android:textAllCaps="false"
         android:background="@android:drawable/btn_dropdown"
         app:layout_constraintTop_toBottomOf="@id/orientation"
         app:layout_constraintBottom_toTopOf="@id/category"
@@ -101,7 +101,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:lines="2"
+        android:lines="3"
+        android:textAllCaps="false"
         android:background="@android:drawable/btn_dropdown"
         app:layout_constraintTop_toBottomOf="@id/category"
         app:layout_constraintBottom_toBottomOf="parent"
