проблема: DaggerTestComponent не компилируется

--- a/app/src/main/res/layout/dialog_spinner.xml
+++ b/app/src/main/res/layout/dialog_spinner.xml
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:background="@drawable/form_separator"
         android:divider="@android:drawable/divider_horizontal_textfield"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         android:dividerHeight="3dp"
         android:layout_gravity="center"
         />
@@ -25,11 +28,12 @@
 
         <Button
             android:id="@+id/but_cancel"
+            style="@android:style/Widget.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:text="cancel"
-            style="@android:style/Widget.Button"/>
+            android:background="@android:drawable/dialog_holo_light_frame"
+            android:text="cancel" />
 
         <Button
             android:id="@+id/but_ok"
