--- a/app/src/main/res/drawable/form_separator.xml
+++ b/app/src/main/res/drawable/form_separator.xml
@@ -2,9 +2,8 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <size android:height="8dp"
-        android:width="10dp"/>
-    <padding android:left="8dp"
-        android:right="8dp"/>
-    <solid android:color="@android:color/black"/>
+    <stroke android:width="2dp"
+        android:color="?attr/colorPrimary"/>
+    <corners android:radius="4dp"/>
+    <solid android:color="@android:color/transparent"/>
 </shape>
