--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:clickable="true"
+    android:focusable="true"
     app:cardBackgroundColor="@android:color/darker_gray"
     app:strokeWidth="2dp"
     app:strokeColor="@android:color/holo_orange_light"
