--- a/app/src/main/res/values/request_parameters.xml
+++ b/app/src/main/res/values/request_parameters.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string-array name="image_type">
+        <item>photo</item>
+        <item>illustration</item>
+        <item>vector</item>
+    </string-array>
+
+    <string-array name="orientation">
+        <item>horizontal</item>
+        <item>vertical</item>
+    </string-array>
+
     <string-array name="category">
         <item>fashion</item>
         <item>nature</item>
